# ChangeLog for dev-lang/mono
# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-lang/mono/ChangeLog,v 1.237 2012/04/09 14:44:12 maekke Exp $

  09 Apr 2012; Markus Meier <maekke@gentoo.org> mono-2.10.8.ebuild:
  x86 stable, bug #407701

  18 Mar 2012; Pacho Ramos <pacho@gentoo.org> -mono-2.10.6.ebuild,
  mono-2.10.8.ebuild:
  Drop gluezilla references.

*mono-2.10.8 (22 Jan 2012)

  22 Jan 2012; Pacho Ramos <pacho@gentoo.org> +mono-2.10.8.ebuild,
  -mono-2.10.2-r1.ebuild:
  Version bump, drop old.

  10 Nov 2011; Kacper Kowalik <xarthisius@gentoo.org> mono-2.10.5.ebuild:
  ppc stable wrt #389181

  05 Nov 2011; Markos Chandras <hwoarang@gentoo.org> mono-2.10.5.ebuild:
  Stable on amd64 wrt bug #389181

  04 Nov 2011; Pawel Hajdan jr <phajdan.jr@gentoo.org> mono-2.10.5.ebuild:
  x86 stable wrt bug #389181

*mono-2.10.6 (01 Nov 2011)

  01 Nov 2011; Pacho Ramos <pacho@gentoo.org> +mono-2.10.6.ebuild:
  Version bump.

  16 Sep 2011; Pacho Ramos <pacho@gentoo.org> mono-2.10.5.ebuild:
  Add virtual/yacc to DEPEND per bug #382911 by bay.

  10 Sep 2011; Pacho Ramos <pacho@gentoo.org> mono-2.10.5.ebuild, metadata.xml:
  Use and DEPEND on pax tools only when people wants to use mono on hardened
  kernels (bug #375799 by Anthony Basile).

*mono-2.10.5 (10 Sep 2011)

  10 Sep 2011; Pacho Ramos <pacho@gentoo.org> -mono-2.10.1-r2.ebuild,
  -mono-2.10.2.ebuild, -mono-2.10.4.ebuild, +mono-2.10.5.ebuild:
  Version bump (also fixes bug 382291 by mori rámar), drop old and broken
  versions.

*mono-2.10.4 (18 Aug 2011)

  18 Aug 2011; Alistair Bush <ali_bush@gentoo.org> +mono-2.10.4.ebuild:
  Version Bump.

  14 Jul 2011; Kacper Kowalik <xarthisius@gentoo.org> mono-2.10.2-r1.ebuild:
  ppc stable wrt #372983

  06 Jul 2011; Markos Chandras <hwoarang@gentoo.org> mono-2.10.2-r1.ebuild:
  Stable on amd64 wrt bug #372983

  05 Jul 2011; Thomas Kahle <tomka@gentoo.org> mono-2.10.2-r1.ebuild:
  x86 stable per bug 372983
