@@ -1,6 +1,11 @@
 # ChangeLog for dev-lang/mono
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-lang/mono/ChangeLog,v 1.237 2012/04/09 14:44:12 maekke Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-lang/mono/ChangeLog,v 1.238 2012/05/04 12:33:18 ali_bush Exp $
+
+*mono-2.10.9 (04 May 2012)
+
+  04 May 2012; Alistair Bush <ali_bush@gentoo.org> +mono-2.10.9.ebuild:
+  Version bump to mac-only release due to bug #414393.
 
   09 Apr 2012; Markus Meier <maekke@gentoo.org> mono-2.10.8.ebuild:
   x86 stable, bug #407701
